--- a/css/sacred-tradition.css
+++ b/css/sacred-tradition.css
@@ -6,3 +6,18 @@ main.sacred p {
     margin-left: 25%;
     margin-right: 25%;
 }
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.box {
+    flex: 1;
+    margin: 1.213%;
+    padding: 1.213%;
+    width: auto;
+    text-align: center;
+    background-image: linear-gradient(#ee1213, #000000);
+}
